# Othhelo

./: .gitignore  .gitmodules  Boards.cpp  Boards.h  CMakeLists.txt  Game.cpp  Game.h  Graphic.cpp  Graphic.h  README.MD  Siv3dOthhelo.sln  dialogbox.cpp  dialogbox.h  main.cpp  net.cpp  net.h  otthelo.sln  otthelo.vcxproj
Siv3dOthhelo/: .gitignore  Boards.cpp  Boards.h  Game.cpp  Game.h  Graphic.cpp  Graphic.h  Main.cpp  Siv3dOthhelo.vcxproj  Siv3dOthhelo.vcxproj.filters  net.cpp  net.h
