cmake_minimum_required(VERSION 3.0)
project(othello)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENTIONS OFF)
add_executable(othello Boards.cpp dialogbox.cpp Game.cpp Graphic.cpp main.cpp)
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    add_definitions(-DLinux_System)
    add_subdirectory("./Boxer")
    find_package(SDL2 REQUIRED)
    find_package(SDL2_net REQUIRED)
    include_directories(${SDL2_INCLUDE_DIRS})
    include_directories(${SDL2_NET_INCLUDE_DIRS})
    target_link_libraries(othello ${SDL2_LIBRARIES} ${SDL2_NET_LIBRARIES} Boxer)
else()
    link_directories(./SDL2-2.0.8/lib/x64)
    link_directories(./SDL2_net-2.0.1/lib/x64)
    include_directories(./SDL2-2.0.8/include/)
    include_directories(./SDL2_net-2.0.1/include/)
    target_link_libraries(othello SDL2.lib SDL2main.lib SDL2_net.lib)

endif()
